--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="footerRightMenu">
                 <h1 class="fMenuTitle">Follow Us</h1> 
             <div class="fIcons">
-                <a href="https://www.facebook.com/nike"><img src="./img/facebook1.png" alt="" class="fIcon"></a>
+                <a href="https://www.facebook.com/nike"><img src="./img/facebook.png" alt="" class="fIcon"></a>
                 <a href="https://x.com/nikestore?lang=en"><img src="./img/newX.png" alt="" class="fIcon"></a>
                <a href="https://www.instagram.com/nike?igsh=bWxoMXVkYzlmNHdy"><img src="./img/insta2.png" alt="" class="fIcon"></a> 
                 <img src="./img/wats1.png" alt="" class="fIcon">
